--- a/student/Templates/base.html
+++ b/student/Templates/base.html
@@ -370,7 +370,7 @@
                                         class="hide-menu"> Student Admission
                                     </span></a>
                             </li>
-                            <li class="sidebar-item"><a href="table-dark-basic.html" class="sidebar-link"><span
+                            <li class="sidebar-item"><a href="{% url 'studentprint' %}" class="sidebar-link"><span
                                         class="hide-menu"> Print Admission Form
                                     </span></a>
                             </li>
@@ -394,7 +394,7 @@
                                 Student Swicth Process
                             </span></a>
                             </li>
-                            <li class="sidebar-item"><a href="Archieve Student Search" class="sidebar-link"><span
+                            <li class="sidebar-item"><a href="{% url 'studentmigration' %}" class="sidebar-link"><span
                                 class="hide-menu">
                                 Student Migration Process
                             </span></a>
